--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body, h1, ul, li, a {
 }
 
 .logo:hover {
-    color:rgb(177, 175, 175);
+    color:rgb(177, 175, 175);;
     cursor: pointer;
 }
  
@@ -46,9 +46,8 @@ body, h1, ul, li, a {
 }
  
 .navbar a:hover {
-    color:rgb(177, 175, 175);
     cursor: pointer;
-
+    color:rgb(177, 175, 175);
 }
 
 .imskjerm2024 {
@@ -76,5 +75,7 @@ body, h1, ul, li, a {
 .therest {
     color: #4c5920;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(227,218,201,1) 0%, rgba(148,216,220,1) 100%, rgba(0,212,255,1) 100%);
+    height: 100%;
 }
+
 
