--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body, h1, ul, li, a {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 0.5px;
     cursor: pointer;
+    padding-top: 175px;
 }
 
 .send {
@@ -63,6 +64,7 @@ body, h1, ul, li, a {
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 1px;
+    padding-top: 45px;
 }
 
 .epost{
@@ -70,12 +72,15 @@ body, h1, ul, li, a {
     font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
+    padding-top: 5px;
 }
 
 .therest {
     color: #4c5920;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(227,218,201,1) 0%, rgba(148,216,220,1) 100%, rgba(0,212,255,1) 100%);
-    height: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 
