--- a/om_oss.css
+++ b/om_oss.css
@@ -86,4 +86,7 @@ body, h1, ul, li, a {
 .therest {
     color: #4c5920;
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(227,218,201,1) 0%, rgba(148,216,220,1) 100%, rgba(0,212,255,1) 100%);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
