--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body, h1, ul, li, a {
 .imskjerm2024 {
     text-align: center;
     font-size: 40px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif
     letter-spacing: 0.5px;
     cursor: pointer;
     padding-top: 175px;
@@ -71,13 +71,13 @@ body, h1, ul, li, a {
     text-align: center;
     font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
-    letter-spacing: 2px;
+    letter-spacing: 2px;    
     padding-top: 5px;
 }
 
 .therest {
-    color: #4c5920;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(227,218,201,1) 0%, rgba(148,216,220,1) 100%, rgba(0,212,255,1) 100%);
+    color: #584834;
+    background: linear-gradient(90deg, rgb(255, 201, 153) 0%, rgb(255, 181, 83) 0%, rgb(254, 160, 160) 100%, rgb(255, 121, 121) 100%);
     height: 100vh;
     display: flex;
     flex-direction: column;
