--- a/om_oss.css
+++ b/om_oss.css
@@ -64,6 +64,7 @@ body, h1, ul, li, a {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
     color: #4c5920;
+    padding-top: 100px;
 
 }
 
@@ -75,6 +76,7 @@ body, h1, ul, li, a {
     font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 2px;
     color: #4c5920;
+    padding-top: 70px;
 }
 #e-post{
     text-align: center;
@@ -83,10 +85,13 @@ body, h1, ul, li, a {
     letter-spacing: 2px;
     color: #4c5920;
 }
+
 .therest {
     color: #4c5920;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(227,218,201,1) 0%, rgba(148,216,220,1) 100%, rgba(0,212,255,1) 100%);
-    height: 100vh;
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(244, 207, 213) 0%, rgb(180, 205, 157) 100%, rgb(122, 151, 101) 100%);
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
+
+
